@@ -23,8 +23,8 @@
 
 /*
  * @test
- * @compile --enable-preview --source ${jdk.version} recordReflectionTest.java
- * @run main/othervm --enable-preview recordReflectionTest
+ * @bug 8246774
+ * @summary testing reflection APIs for record classes
  */
 
 
