@@ -23,9 +23,10 @@
 
 /*
  * @test
+ * @bug 8246774
  * @summary Verify javac can read record classfiles it writes
- * @compile --enable-preview -source ${jdk.version} Record.java
- * @compile --enable-preview -source ${jdk.version} WriteReadTest.java
+ * @compile Record.java
+ * @compile WriteReadTest.java
  */
 public class WriteReadTest {
     Record1 r1;
